# vvz-muons

./: .gitattributes  .gitignore  .gitmessage  MANIFEST.in  README.md  config_jagged.yaml  install-muons  projectid  pyproject.toml  setup.cfg
.cursor/rules/: rules.mdc  structure.mdc
code_analysis/: code_issues.yaml  code_map.yaml
docs/: RULES.md  accents.md  addontspc.md  backend_and_vectorization.md  max_runs_tz.md  project_structure.md  run_results_description.md  step_by_step_verification.md  techspec.md  techspec_analysis.md
docs/plan/: README.md  plan_code_audit.md  step_01_open_root_select_tree.md  step_02_select_branches.md  step_03_first_pass_stats.md  step_04_build_O_matrix.md  step_05_correlation_W.md  step_06_laplacian_spectrum.md  step_07_metrics.md  step_08_baseline.md
src/muons/: __init__.py  backend.py  baseline.py  branches.py  cli.py  config_loader.py  correlation.py  io.py  jagged_aggs.py  laplacian.py  manifest.py  metrics.py  observables.py  stats.py
tests/: __init__.py  test_baseline.py  test_branches.py  test_correlation.py  test_io.py  test_laplacian.py  test_metrics.py  test_observables.py  test_stats.py
